# cyberbot

./: .gitignore  LICENSE  PLUGINS.md  README.md  bernd-lauert.service  bernd.hauptbahnhof.conf  config.ini  convert_db  convert_invitations  cyberbot.service  default.nix  launch  pyproject.toml  requirements.txt
bernd/: __main__.py  matrixbot.py  matrixroom.py  plugin.py
cyberbot/: __main__.py  bot.py  config.py  database.py  http_server.py  main.py  matrixbot.py  matrixroom.py  module_loader.py  plugin.py  room.py  room_acl.py  room_module.py  room_tracker.py  types.py  util.py
etc/: config-example.yaml  cyberbot.service
global_plugins/: flycheck_github_manager.py  git_manager.py  github_manager.py  gitlab_manager.py  http_server.py  invite_manager.py
plugins/: alarm.py  brackets.py  cage.py  catfacts.py  corona_plugin.py  danke.py  defender.py  digital_first.py  echo.py  echo_plugin.py  gitlab.ini  gitlab_plugin.py  gitlab_rss.py  gitlab_rss_plugin.py  greeting.py  hackerspace.py  haspa.py  help.py  help_plugin.py  hi_bernd.py  imagetest_plugin.py  industrie.py  issue.py  java.py  jemand.py  kvtest_plugin.py  lautbrett.py  maunz.py  mensa_plugin.py  meta_plugin.py  mqtt.py  mvg.py  mvg_plugin.py  oop.py  pokemon.py  polcor.py  pot.py  rss_token.py  soundboard-say.py  status.py  (+4 more)
plugins_examples/: ]  corona_plugin.py  ctf_plugin.py  echo_plugin.py  git.py  github_plugin.py  gitlab_plugin.py  gitlab_plugin.py.bak  invite_plugin.py  room_hook_plugin.py  voting_plugin.py
plugins_tests/: hungry_plugin.pybak  imagetest_plugin.py  kvtest_plugin.py  (+1 more)
(+38 files in other folders)
